hphp/hack/test/typecheck/expression_trees/splice_err1.php.exp
File "splice_err1.php", line 9, characters 19-23:
This value cannot be spliced into a `ExampleDsl` expression tree (Typing[4110])
  File "expr_tree.hhi", line 200, characters 5-27:
  Expected `ExampleDslExpression<T>` because you are splicing into a `ExampleDsl` expression or block
  File "splice_err1.php", line 6, characters 8-8:
  But got `int`
  File "splice_err1.php", line 9, characters 21-22:
  Hack values need to be lifted to compatible types before splicing. See https://docs.hhvm.com/hack/expression-trees/splicing for more information.
File "splice_err1.php", line 9, characters 21-22:
Invalid argument (Typing[4110])
  File "expr_tree.hhi", line 200, characters 5-27:
  Expected `Spliceable<ExampleDsl, mixed, _>`
  File "splice_err1.php", line 6, characters 8-8:
  But got `int`
